fix: overflow x fixed for mobile screen sizes

--- a/css/demo.css
+++ b/css/demo.css
@@ -9,6 +9,10 @@
 		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
+html, body {
+	overflow-x: hidden;
+}
+
 *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
 .clearfix:before, .clearfix:after { display: table; content: ''; }
 .clearfix:after { clear: both; }
